--- a/Project/about.html
+++ b/Project/about.html
@@ -25,7 +25,7 @@
 			</button>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Home</a>  </li>
+					<li><a href="index.html">Home</a>  </li>
 					<li><a href="#">Blog</a></li>
 					<li><a href="#">Portfolio</a></li>
 					<li class="active"><a href="#">About Us</a></li>
@@ -46,52 +46,64 @@
 				<h2>Our Team</h2>			
 			</div>
 
-			<div class="col-lg-4 col-sm-6 text-center mb-4">
-				<img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200">
-				<h3>Name
-					<small>Job Title</small>
-				</h3>
-				<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+			<div class="manish">
+				<div class="col-lg-4 col-sm-6 text-center mb-4">
+					<img class="rounded-circle img-fluid d-block mx-auto" src="image/about/manish.jpg">
+					<h3>Manish Kumar
+						<small>Developer</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
 			</div>
 
-			<div class="col-lg-4 col-sm-6 text-center mb-4">
-				<img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200">
-				<h3>Name
-					<small>Job Title</small>
-				</h3>
-				<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+			<div class="hitanshu">
+				<div class="col-lg-4 col-sm-6 text-center mb-4">
+					<img class="rounded-circle img-fluid d-block mx-auto" src="image/about/hitanshu.jpg">
+					<h3>Hitanshu Singh
+						<small>Developer</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
 			</div>
 
-			<div class="col-lg-4 col-sm-6 text-center mb-4">
-				<img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200">
-				<h3>Name
-					<small>Job Title</small>
-				</h3>
-				<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+			<div class="abhijeet">
+				<div class="col-lg-4 col-sm-6 text-center mb-4">
+					<img class="rounded-circle img-fluid d-block mx-auto" src="image/about/abhijeet.jpg">
+					<h3>Abhijeet
+						<small>Developer</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
 			</div>
 
-			<div class="col-lg-4 col-sm-6 text-center mb-4">
-				<img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200">
-				<h3>Name
-					<small>Job Title</small>
-				</h3>
-				<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+			<div class="ankit">
+				<div class="col-lg-4 col-sm-6 text-center mb-4">
+					<img class="rounded-circle img-fluid d-block mx-auto" src="image/about/ankit.jpg">
+					<h3>Ankit Kumar
+						<small>Developer</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
 			</div>
 
-			<div class="col-lg-4 col-sm-6 text-center mb-4">
-				<img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200">
-				<h3>Name
-					<small>Job Title</small>
-				</h3>
-				<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+			<div class="govind">
+				<div class="col-lg-4 col-sm-6 text-center mb-4">
+					<img class="rounded-circle img-fluid d-block mx-auto" src="image/about/govind.jpg">
+					<h3>Govind
+						<small>Developer</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
 			</div>
 
-			<div class="col-lg-4 col-sm-6 text-center mb-4">
-				<img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200">
-				<h3>Name
-					<small>Job Title</small>
-				</h3>
-				<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+			<div class="bipin">
+				<div class="col-lg-4 col-sm-6 text-center mb-4">
+					<img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200">
+					<h3>Bipin
+						<small>Developer</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
 			</div>
 		</div>		
 	</div>
