--- a/Project/index.html
+++ b/Project/index.html
@@ -25,7 +25,7 @@
 			</button>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="active"><a href="#">Home</a></li>
+					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="#">Blog</a></li>
 					<li><a href="#">Portfolio</a></li>
 					<li><a href="about.html">About Us</a></li>
