--- a/Project/login.html
+++ b/Project/login.html
@@ -20,7 +20,7 @@
 			</button>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="#">Blog</a></li>
 					<li><a href="#">Portfolio</a></li>
 					<li><a href="about.html">About Us</a></li>
@@ -46,7 +46,7 @@
 						<input type="submit" name="" value="Sign In">
 						<a href="#">Forgot Password</a>
 						<hr>
-						<a href="#">Don't have an account? Create new</a>
+						<a href="signup.html">Don't have an account? Create new</a>
 					</form>
 			</div>
 		</div>
