--- a/Project/signup.html
+++ b/Project/signup.html
@@ -20,7 +20,7 @@
 			</button>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="#">Blog</a></li>
 					<li><a href="#">Portfolio</a></li>
 					<li><a href="about.html">About Us</a></li>
@@ -50,7 +50,7 @@
 						<p>Confirm Password</p>
 						<input type="Password" name="" placeholder="Enter Password">
 						<input type="submit" name="" value="Sign Up">
-						<a href="#">Back to Login</a>	
+						<a href="login.html">Back to Login</a>	
 					</form>
 			</div>
 		</div>
